# price-tracker-mcp

./: README.md  debug_amazon.html  main.py  price_data.json  pyproject.toml
src/mcpserver/: __main__.py  pricetracker.py  scraper.py
